# codegraph-rust

./: .gitattributes  .gitignore  .oxfmtignore  AGENTS.md  CHANGELOG.md  Cargo.toml  KNOWN_DIFFS.md  Makefile  README.md  audit.toml  cliff.toml  clippy.toml  codecov.yml  install.ps1  install.sh  release-please-config.json
.aws/: pipeline.json
crates/codegraph-bench/: Cargo.toml
crates/codegraph-bench/benches/: micro.rs
crates/codegraph-bench/fixtures/arkts/: component.ets
crates/codegraph-bench/fixtures/cfml/: Base.cfc  Gadget.cfs  Widget.cfm
crates/codegraph-bench/fixtures/cpp/: base.hpp  derived.cpp  namespaced.cpp  templated_call.cpp  ue_actor.h
crates/codegraph-bench/fixtures/cuda/: kernel.cu
crates/codegraph-bench/fixtures/erlang/: m.erl
crates/codegraph-bench/fixtures/godot/: combo_ui.tscn  effect_manager.gd  effect_manager.gd.uid  game_flow.gd  main.tscn  project.godot  stage_manager.gd
crates/codegraph-bench/fixtures/metal/: shader.metal
crates/codegraph-bench/fixtures/nix/: bar.nix  default.nix  foo.nix
crates/codegraph-bench/fixtures/ruby/: logger.rb  service.rb
crates/codegraph-bench/fixtures/solidity/: IERC20.sol  Token.sol
crates/codegraph-bench/fixtures/terraform/: main.tf
crates/codegraph-bench/src/: corpus.rs  lib.rs  main.rs  markdown.rs  metrics.rs  pipeline.rs  report.rs  runner.rs
crates/codegraph-bench/src/oracle/: canonicalize.rs  diff.rs  golden.rs  mod.rs
crates/codegraph-bench/tests/: equivalence.rs
crates/codegraph-cli/: Cargo.toml
crates/codegraph-cli/src/: main.rs  segment_match.rs  segments.rs  structural_gate.rs
crates/codegraph-cli/src/installer/: mod.rs  registry.rs  shared.rs  skill.rs  types.rs  vscode_user.rs
crates/codegraph-cli/tests/: affected.rs  audit.rs  catch_up.rs  cli_audit.rs  cli_commands.rs  cli_text_and_errors.rs  cold_start_handshake.rs  completions.rs  daemon_idle.rs  daemon_single_watcher.rs  daemon_spawn.rs  daemon_sweep.rs  explore_node_cli.rs  explore_stale_index.rs  files.rs  godot_idfields_cwd.rs  godot_idfields_determinism.rs  godot_qualified_lookup.rs  http_background.rs  http_serve.rs  installer.rs  installer_jsonc.rs  live_update_direct.rs  parallel_index.rs  prompt_hook.rs  proxy_e2e.rs  rmcp_serve_direct.rs  skill_install.rs  status_debug_fields.rs  stdout_purity.rs  sync_incremental.rs  zed_bare_serve.rs
crates/codegraph-cli/tests/snapshots/: check_json.stdout
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: config.rs  errors.rs  lib.rs  logger.rs  node_id.rs  traits.rs  types.rs
crates/codegraph-daemon/: Cargo.toml
crates/codegraph-daemon/src/: http_registry.rs  lib.rs  lock.rs  paths.rs  process.rs  proxy.rs  session.rs  spawn.rs  transport.rs
crates/codegraph-daemon/tests/: async_model.rs  lifecycle.rs  proxy.rs  regressions.rs  rmcp_reap.rs  rmcp_tools_call.rs  session_buffer.rs  stale_socket.rs
crates/codegraph-extract/: Cargo.toml
crates/codegraph-extract/examples/: abi_smoke.rs
crates/codegraph-extract/src/: engine.rs  ext_config.rs  function_ref.rs  lib.rs  spec.rs  walker.rs
crates/codegraph-extract/src/embedded/: astro.rs  dfm.rs  liquid.rs  mod.rs  mybatis.rs  razor.rs  shared.rs  svelte.rs  vue.rs
crates/codegraph-extract/src/lang/: arkts.rs  c.rs  cfml.rs  cpp.rs  csharp.rs  dart.rs  erlang.rs  gdscript.rs  go.rs  java.rs  javascript.rs  jsx.rs  kotlin.rs  lua.rs  luau.rs  mod.rs  nix.rs  objc.rs  pascal.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  solidity.rs  swift.rs  terraform.rs  tsx.rs  typescript.rs
crates/codegraph-extract/tests/: batch_a_languages.rs  batch_b_languages.rs  batch_c_languages.rs  batch_coverage_languages.rs  batch_coverage_languages2.rs  batch_coverage_languages3.rs  coverage_embedded.rs  coverage_ext_config.rs  coverage_lang_extractors.rs  custom_ext.rs  embedded_languages.rs  gdscript_abi_smoke.rs  gdscript_language.rs  godot_language.rs  markup_risk_languages.rs  swift_computed_properties.rs  typescript_engine.rs
crates/codegraph-extract/tests/fixtures/: mapper.xml  sample.astro  sample.liquid  sample.razor  sample.svelte  sample.vue
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: centrality.rs  export.rs  lib.rs
crates/codegraph-graph/src/graph/: mod.rs
crates/codegraph-graph/src/query/: mod.rs  parser.rs  scoring.rs
crates/codegraph-graph/tests/: godot_honesty.rs  godot_resource_audit.rs  search.rs  traversal.rs
crates/codegraph-mcp/: Cargo.toml
crates/codegraph-mcp/examples/: serve_stdio.rs
crates/codegraph-mcp/src/: dynamic_boundaries.rs  engine.rs  explore_budget.rs  instructions.rs  lib.rs  protocol.rs  rmcp_handler.rs  rmcp_session.rs  roots.rs  schemas.rs  server.rs  tools_list.json
crates/codegraph-mcp/tests/: godot_honesty_mcp.rs  golden_mcp.rs  reopen.rs  rmcp_http.rs  rmcp_l3.rs  rmcp_parity.rs  rmcp_roots.rs
crates/codegraph-mcp/tests/support/: parity.rs
crates/codegraph-resolve/: Cargo.toml
crates/codegraph-resolve/src/: context.rs  framework.rs  import_resolver.rs  lib.rs  lru_cache.rs  name_matcher.rs  path_aliases.rs  pathutil.rs  resolver.rs  snapshot_context.rs  strip_comments.rs  types.rs  workspace_packages.rs
crates/codegraph-resolve/src/frameworks/: godot.rs  godot_common.rs  godot_dsl_config.rs  godot_project.rs  godot_resource.rs  godot_scene.rs  godot_script.rs  mod.rs  nestjs.rs  react.rs  vue.rs
crates/codegraph-resolve/tests/: frameworks.rs  godot_class_member.rs  godot_dsl.rs  godot_post_extract.rs  godot_project.rs  godot_resource.rs  godot_scene.rs  godot_script.rs  golden_resolution.rs  snapshot_equivalence.rs
crates/codegraph-store/: Cargo.toml
crates/codegraph-store/src/: connection.rs  lib.rs  migrations.rs  queries.rs  schema.rs
crates/codegraph-store/tests/: bulk_index_pragmas.rs  schema_parity.rs
crates/codegraph-watch/: Cargo.toml
crates/codegraph-watch/src/: git.rs  lib.rs  policy.rs  sync.rs  watcher.rs  worktree.rs
crates/codegraph-watch/tests/: include_scan_watch_parity.rs  windows_handle_stability.rs
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
(+130 files in other folders)
