[workspace]
members = [
    "crates/codegraph-core",
    "crates/codegraph-extract",
    "crates/codegraph-store",
    "crates/codegraph-graph",
    "crates/codegraph-resolve",
    "crates/codegraph-mcp",
    "crates/codegraph-daemon",
    "crates/codegraph-watch",
    "crates/codegraph-cli",
    "crates/codegraph-bench",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["sunerpy <nkuzhangshn@gmail.com>"]
repository = "https://github.com/sunerpy/codegraph-rust"
homepage = "https://github.com/sunerpy/codegraph-rust"
rust-version = "1.70"
keywords = ["code-graph", "tree-sitter", "code-analysis", "sqlite", "mcp"]
categories = ["development-tools", "command-line-utilities", "parsing"]

[workspace.dependencies]
# Config (rust-base-convention)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"

# Utilities
sha2 = "0.10"
rayon = "1.8"

# Logging (rust-base-convention)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Tree-sitter
tree-sitter = "0.26"
streaming-iterator = "0.1"

# File watching
notify = "6"

# CLI
clap = { version = "4.5", features = ["derive"] }

# JSONC config editing (preserve comments + key order on agent config writes)
jsonc-parser = { version = "0.26", features = ["cst", "serde"] }

# Self-update from GitHub Releases (mise-style `codegraph self-update`)
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

# Benchmarking
criterion = "0.7"

# Testing (dev-dependencies; not shipped in the binary)
rstest = "0.23"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"



[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
