[workspace]
members = [
    "crates/codegraph-core",
    "crates/codegraph-extract",
    "crates/codegraph-store",
    "crates/codegraph-graph",
    "crates/codegraph-resolve",
    "crates/codegraph-mcp",
    "crates/codegraph-daemon",
    "crates/codegraph-watch",
    "crates/codegraph-cli",
    "crates/codegraph-bench",
]
resolver = "2"

[workspace.package]
version = "0.28.2"
edition = "2024"
license = "MIT"
authors = ["sunerpy <nkuzhangshn@gmail.com>"]
repository = "https://github.com/sunerpy/codegraph-rust"
homepage = "https://github.com/sunerpy/codegraph-rust"
rust-version = "1.96"
keywords = ["code-graph", "tree-sitter", "code-analysis", "sqlite", "mcp"]
categories = ["development-tools", "command-line-utilities", "parsing"]

[workspace.dependencies]
# Config (rust-base-convention)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"

# Utilities
sha2 = "0.10"
sha1_smol = "1"
rayon = "1.8"

# Logging (rust-base-convention)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Tree-sitter
tree-sitter = "0.26"
streaming-iterator = "0.1"

# File watching
notify = "6"

# Cross-platform IPC (daemon local socket / named pipe). The `tokio` feature
# enables the async local-socket Listener/Stream used by the daemon accept loop.
interprocess = { version = "2.4", features = ["tokio"] }
rustix = { version = "0.38", features = ["process"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Progress bars; major pinned to the one self_update resolves to avoid a duplicate copy.
indicatif = { version = "0.18", features = ["rayon"] }

# JSONC config editing (preserve comments + key order on agent config writes)
jsonc-parser = { version = "0.26", features = ["cst", "serde"] }

# Self-update from GitHub Releases (mise-style `codegraph self-update`)
# self_update 0.43+ moved to quick-xml ^0.38 (fixes RUSTSEC-2026-0194/0195) and
# indicatif ^0.18; the builder API used by cmd_self_update is unchanged (no break
# until the 1.0.0-rc line). 0.44 also made the HTTP client optional: `reqwest` must
# be listed explicitly, and `rustls` gates on it (`reqwest?/rustls`), so keep both
# to get reqwest+rustls (no native-tls/OpenSSL) as before. Keep default-features=false.
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Benchmarking
criterion = "0.7"

# Testing (dev-dependencies; not shipped in the binary)
rstest = "0.23"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"



[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
# panic = "unwind": the rmcp MCP handler recovers a `spawn_blocking` tool panic as
# a JSON-RPC error via `JoinError::is_panic()`, which needs unwinding — under
# "abort" a handler panic SIGABRTs the whole process (spike Q5). `panic` is
# whole-profile (no per-`[[bin]]` override) and `--release` is the only profile
# the release pipeline builds, so this is the shipped setting. Do NOT revert to
# "abort" without dropping that panic-isolation guarantee.
panic = "unwind"
