[package]
name = "codegraph-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "CodeGraph-rs: a deterministic tree-sitter + SQLite/FTS5 code knowledge graph CLI and MCP server."
readme = "../../README.md"

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-daemon = { path = "../codegraph-daemon" }
codegraph-extract = { path = "../codegraph-extract" }
codegraph-graph = { path = "../codegraph-graph" }
codegraph-mcp = { path = "../codegraph-mcp" }
codegraph-resolve = { path = "../codegraph-resolve" }
codegraph-store = { path = "../codegraph-store" }
codegraph-watch = { path = "../codegraph-watch" }
serde = { workspace = true }
serde_json = { workspace = true }
jsonc-parser = { workspace = true }
self_update = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }

[dev-dependencies]
codegraph-bench = { path = "../codegraph-bench" }
rstest = { workspace = true }
assert_fs = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
