[package]
name = "codegraph-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Per-project single-instance daemon (pid + socket, ppid watchdog) for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
# Cross-platform IPC (local socket on unix, named pipe on windows)
interprocess = { workspace = true }
codegraph-mcp = { path = "../codegraph-mcp" }
codegraph-watch = { path = "../codegraph-watch" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
] }

# Unix process introspection (getppid, signal-0 liveness) + socket half-close
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["net"] }

# Windows process introspection (OpenProcess + GetExitCodeProcess liveness)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
codegraph-core = { path = "../codegraph-core" }
