[package]
name = "codegraph-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "tree-sitter extraction engine (walker, per-language specs, embedded & custom extractors) for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
rayon = { workspace = true }
tree-sitter = { workspace = true }
streaming-iterator = { workspace = true }
codegraph-core = { path = "../codegraph-core" }
serde_json = { workspace = true }
tracing = { workspace = true }

tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-gdscript = "6.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.5.0"
tree-sitter-luau = "1.2.0"
tree-sitter-objc = "3.0.2"
tree-sitter-pascal = "0.10.2"
tree-sitter-php = "0.24.2"
tree-sitter-properties = "0.3.0"
tree-sitter-python = "0.25.0"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"

[dev-dependencies]
serde_json = { workspace = true }
