[package]
name = "codegraph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Graph traversal (callers/callees/impact/cycles), FTS5 scoring, and whole-graph export/centrality for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
codegraph-core = { path = "../codegraph-core" }
codegraph-store = { path = "../codegraph-store" }
rusqlite = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
codegraph-extract = { path = "../codegraph-extract" }
codegraph-resolve = { path = "../codegraph-resolve" }
