[package]
name = "codegraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "MCP stdio JSON-RPC server and tool handlers for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
codegraph-core = { path = "../codegraph-core" }
codegraph-store = { path = "../codegraph-store" }
codegraph-graph = { path = "../codegraph-graph" }
codegraph-resolve = { path = "../codegraph-resolve" }
regex = "1.10"
rmcp = { version = "2.1", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
], optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
], optional = true }
# axum + tokio-util: only used by the streamable-HTTP serve path (Phase C).
# axum hosts the `StreamableHttpService` tower service and binds the listener;
# tokio-util provides the `CancellationToken` the service shuts down on.
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "tokio",
], optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
# Default build MUST stay rmcp-free (no rmcp/tokio/axum in the tree) — dual-path gate.
rmcp = ["dep:rmcp", "dep:tokio", "dep:axum", "dep:tokio-util"]

[dev-dependencies]
codegraph-extract = { path = "../codegraph-extract" }
# rmcp `client` feature: dev-only, drives the handler over duplex in parity tests.
rmcp = { version = "2.1", features = ["client", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
# reqwest: dev-only HTTP client for the Phase C streamable-HTTP integration test.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
