[package]
name = "codegraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "MCP stdio JSON-RPC server and tool handlers for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
codegraph-core = { path = "../codegraph-core" }
codegraph-store = { path = "../codegraph-store" }
codegraph-graph = { path = "../codegraph-graph" }
codegraph-resolve = { path = "../codegraph-resolve" }
regex = "1.10"
# rmcp is now the SOLE MCP transport (Phase E): a regular dependency, no longer
# feature-gated. The shipped binary links rmcp + tokio + axum unconditionally.
rmcp = { version = "2.1", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
] }
# axum: hosts the `StreamableHttpService` tower service for the streamable-HTTP
# serve path and binds the listener.
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "tokio",
] }
tokio-util = { version = "0.7" }

[dev-dependencies]
codegraph-extract = { path = "../codegraph-extract" }
# rmcp `client` feature: dev-only, drives the handler over duplex in parity tests.
rmcp = { version = "2.1", features = ["server", "client", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
# reqwest: dev-only HTTP client for the streamable-HTTP integration test.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# tower: dev-only, provides `ServiceExt::oneshot` to unit-test the debug
# middleware's transparent passthrough without spawning a server.
tower = { version = "0.5", features = ["util"] }
