[package]
name = "codegraph-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Cross-file symbol resolution (import resolver, name matcher, framework resolvers) for CodeGraph-rs."
readme = "../../README.md"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-store = { path = "../codegraph-store" }
codegraph-extract = { path = "../codegraph-extract" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
